<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnsub"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="68dp"
        android:text="@string/sub"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="326dp"
        android:text="@string/divid"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btnmulti"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="235dp"
        android:text="@string/multi"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="157dp"
        android:text="@string/add"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btneq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:layout_marginBottom="69dp"
        android:text="="
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="201dp"
        android:layout_marginRight="201dp"
        android:layout_marginBottom="67dp"
        android:text="@string/zero"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="302dp"
        android:layout_marginRight="302dp"
        android:layout_marginBottom="69dp"
        android:text="CLEAR"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="155dp"
        android:text="@string/_1"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="201dp"
        android:layout_marginRight="201dp"
        android:layout_marginBottom="155dp"
        android:text="@string/_2"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="301dp"
        android:layout_marginRight="301dp"
        android:layout_marginBottom="155dp"
        android:text="@string/_3"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="234dp"
        android:text="@string/_4"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="201dp"
        android:layout_marginRight="201dp"
        android:layout_marginBottom="232dp"
        android:text="@string/_5"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btb9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="301dp"
        android:layout_marginRight="301dp"
        android:layout_marginBottom="321dp"
        android:text="@string/_9"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="201dp"
        android:layout_marginRight="201dp"
        android:layout_marginBottom="321dp"
        android:text="@string/_8"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="322dp"
        android:text="7"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="302dp"
        android:layout_marginRight="302dp"
        android:layout_marginBottom="232dp"
        android:text="@string/_6"
        app:backgroundTint="@color/teal_700" />

    <TextView
        android:id="@+id/tvControl"
        android:layout_width="364dp"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:textSize="36sp"
        android:textColor="#ff0877"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="409dp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="372dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:textSize="36sp"
        android:textColor="#ff0877"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="462dp" />
</RelativeLayout>